<resources>
    <string name="app_name">爱猜歌</string>
    <string name="cancel">取消</string>
    <string name="key_word">请输入关键词查询音乐</string>
    <string name="loading">获取数据中</string>
    <string name="me">我的</string>
    <string name="no_msg">暂时没有消息</string>
    <string name="type">请输入歌手或类型</string>
    <string name="sure">确定</string>
    <string name="update">检查更新</string>
    <string name="setting">清除缓存</string>
    <string name="about">关于</string>
    <string name="collect">我的金币</string>
    <string name="index">猜歌</string>
    <string name="listen">听歌</string>
    <string name="info">消息</string>
    <string name="song">歌曲名</string>
    <string name="go">开始吧</string>
    <string name="next">下一首</string>
    <string name="ok">确定</string>
    <string name="answer">请输入你的答案</string>
    <string name="challenge_next">挑战下一个</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user">请输入昵称/手机号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="quick_register">没有账号? 快速注册</string>
    <string name="back_login">已有账号? 直接登录</string>
    <string name="register">注册</string>
    <string name="repassword">请再次输入密码</string>
    <string name="version">当前版本2.8</string>
    <string name="_0kb">0KB</string>
    <string name="zero">0</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="take_photo">拍照</string>
    <string name="picture">从相册选择</string>
    <string name="cancel_">取消</string>
    <string name="modify">修改</string>
    <string name="about_software">关于软件</string>
    <string name="logout">退出登录</string>
    <string name="change">修改</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="chang_pwd">修改密码</string>
    <string name="find">歌手</string>
    <string name="download">下载歌曲</string>
    <string name="copyright_2017">Copyright©2017-2018</string>
    <string name="other_user">------第三方账号登录------</string>
    <string name="nichen">请输入昵称...</string>
    <string name="userandpwd">填写昵称和密码</string>
    <string name="phone">请输入手机号</string>
    <string name="code">请输入验证码</string>
    <string name="btn_next">下一步</string>
    <string name="getCode">获取验证码</string>
    <string name="xinge">新歌</string>
    <string name="rege">热歌</string>
    <string name="yaogun">摇滚</string>
    <string name="jueshi">爵士</string>
    <string name="liuxing">流行</string>
    <string name="oumei">欧美</string>
    <string name="lao">老歌</string>
    <string name="qinge">情歌</string>
    <string name="yinshi">影视</string>
    <string name="wangluo">网络</string>
    <string name="getData">加载数据中</string>
    <string name="msg">你确定需要退出登录吗?</string>
    <string name="msg_title">温馨提示</string>
    <string name="singer_info">歌手详情</string>
    <string name="developer">开发者:高运</string>
    <string name="contact">联系QQ:1984629668</string>
    <string name="singer_name">歌名</string>
    <string name="singer">歌手</string>
    <string name="music_hint">搜索</string>

    <string name="action_settings">Settings</string>
    <string name="play_recored">播放记录</string>
    <string name="no_play">哎呀,你当前没有任何播放记录。</string>
    <string name="remove_all">清空</string>
    <string name="lyric_singer">------歌手------</string>
    <string name="lyric_name">歌名</string>
    <string name="default_time">00:00</string>
    <string name="no_music">无音乐</string>

    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>


    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="download_success">%s下载完成</string>
    <string name="copyright">Copyright © 2017&#045;%d SWUST</string>
    <string name="no_permission">没有%1$s权限，无法%2$s！</string>
    <string name="unknown">未知</string>
    <string name="phone_txt">填写注册手机号</string>
    <string name="info_detail">消息详情</string>
    <string name="zan">赞助开发者</string>
    <string name="click_to_skip">"点击跳过"</string>
    <string name="reload">重新加载</string>
    <string name="no_net">哎呀,好像没有网络</string>
    <string name="no_list">暂无歌单,点击创建吧。</string>
    <string name="default_list">0个歌单</string>
    <string name="add_list_hint">请输入歌单名</string>
    <string name="add_list">添加至歌单</string>
    <string name="no_data">没有获取到数据</string>
    <string name="share">分享</string>
    <string name="enter">进入应用</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_song">无歌曲</string>
</resources>
