<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/add_list"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/msg_title"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/msg"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/cancel"
            android:text="@string/cancel"
            android:textColor="#FFA500"
            tools:ignore="ButtonStyle" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <Button
            android:id="@+id/sure"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/sure"
            android:text="@string/ok"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>