<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gy.musicgame.MainActivity">

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F3F6F8" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/music_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/music_index_selector"
            android:gravity="center"
            android:text="@string/index"
            android:textColor="@drawable/bottom_txt_selector" />

        <RadioButton
            android:id="@+id/music_listen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/music_listen_selector"
            android:gravity="center"
            android:text="@string/listen"
            android:textColor="@drawable/bottom_txt_selector" />

        <RadioButton
            android:id="@+id/music_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/music_me_selector"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="@drawable/bottom_txt_selector" />
    </RadioGroup>
</LinearLayout>
