<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    android:orientation="vertical"
    tools:context="com.example.gy.musicgame.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="80"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="填写手机号"
            android:textColor="#1FBAF3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="230"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="#1FBAF3"
            android:textColorHighlight="#34cf9e"
            android:textColorHint="#1FBAF3" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/code"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="0dp"
            android:hint="@string/code"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="#1FBAF3"
            android:textColorHighlight="#34cf9e"
            android:textColorHint="#1FBAF3" />

        <Button
            android:id="@+id/getCode"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="15sp"
            android:background="#1FBAF3"
            android:gravity="center"
            android:text="@string/getCode"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="230"
            android:enabled="false"
            android:text="@string/btn_next"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="230"
            android:gravity="center"
            android:text="@string/back_login"
            android:textColor="#1FBAF3"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30" />
</LinearLayout>
